Polish up the new corundum socket display entry and update Create

--- a/src/main/resources/assets/tetrapak/lang/en_us.json
+++ b/src/main/resources/assets/tetrapak/lang/en_us.json
@@ -143,9 +143,9 @@
   "tetrapak.stats.expboost.tooltip": "Blocks mined and mobs killed with this tool will reward \u00a7e%s\u00a7r more experience",
   "tetrapak.stats.solidifying": "Solidifying",
   "tetrapak.stats.solidifying.tooltip": "Experience gained with use of this tool will be converted to Nuggets of Experience at a 1:1 rate",
-  "tetra.variant.double_socket/visual_corundum_cluster": "Socket [Corundum]",
+  "tetra.variant.double_socket/visual_corundum_cluster": "Socket [§cC§r§6o§r§er§r§au§r§bn§r§dd§r§fu§r§8m§r]",
   "tetra.variant.double_socket/visual_corundum_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of blocks with matching color",
-  "tetra.variant.single_socket/visual_corundum_cluster": "Socket [Corundum]",
+  "tetra.variant.single_socket/visual_corundum_cluster": "Socket [§cC§r§6o§r§er§r§au§r§bn§r§dd§r§fu§r§8m§r]",
   "tetra.variant.single_socket/visual_corundum_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of blocks with matching color",
   "tetra.variant.double_socket/red_corundum_cluster": "Socket [\u00a7cRed Corundum\u00a7r]",
   "tetra.variant.double_socket/red_corundum_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of red blocks",
@@ -179,9 +179,9 @@
   "tetra.variant.double_socket/white_corundum_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of white blocks",
   "tetra.variant.single_socket/white_corundum_cluster": "Socket [\u00a7fWhite Corundum\u00a7r]",
   "tetra.variant.single_socket/white_corundum_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of white blocks",
-  "tetra.variant.double_socket/black_corundum_cluster": "Socket [\u00a70Black Corundum\u00a7r]",
+  "tetra.variant.double_socket/black_corundum_cluster": "Socket [\u00a78Black Corundum\u00a7r]",
   "tetra.variant.double_socket/black_corundum_cluster.description": "A gem, fitted onto the side of the tool head. The gem is enchanted and hastens harvesting of black blocks",
-  "tetra.variant.single_socket/black_corundum_cluster": "Socket [\u00a70Black Corundum\u00a7r]",
+  "tetra.variant.single_socket/black_corundum_cluster": "Socket [\u00a78Black Corundum\u00a7r]",
   "tetra.variant.single_socket/black_corundum_cluster.description": "A gem, attached where the head meets the handle. The gem is enchanted and hastens harvesting of black blocks",
   "tetrapak.advancements.wither_void.title": "The Flex",
   "tetrapak.advancements.wither_void.description": "Kill a Wither with a Shadow Steel tool",
@@ -197,16 +197,17 @@
   "create.item_attributes.tetrapak.broken": "is broken",
   "create.item_attributes.tetrapak.honeable.inverted": "honing unavailable",
   "create.item_attributes.tetrapak.broken.inverted": "is not broken",
-  "tetrapak.matching": "matching",
-  "tetrapak.red": "red",
-  "tetrapak.orange": "orange",
-  "tetrapak.yellow": "yellow",
-  "tetrapak.green": "green",
-  "tetrapak.blue": "blue",
-  "tetrapak.indigo": "indigo",
-  "tetrapak.violet": "violet",
-  "tetrapak.white": "white",
-  "tetrapak.black": "black",
+  "tetrapak.matching": "Matching",
+  "tetrapak.null": "None",
+  "tetrapak.red": "Red",
+  "tetrapak.orange": "Orange",
+  "tetrapak.yellow": "Yellow",
+  "tetrapak.green": "Green",
+  "tetrapak.blue": "Blue",
+  "tetrapak.indigo": "Indigo",
+  "tetrapak.violet": "Violet",
+  "tetrapak.white": "White",
+  "tetrapak.black": "Black",
   "item.tetrapak.music_disc_playing_with_power": "Music Disc",
   "item.tetrapak.music_disc_playing_with_power.desc": "FantomenK - Playing With Power"
 }
