--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+Version 0.5.1
+    Improvements and fixes:
+        Corundum sockets now appear as a single entry in the holosphere to avoid clutter
+        Create and Quark compat has been rebalanced! Most materials will be stronger on average, with different niches carved out for them
+        Unobtainable materials have been hidden so they don't clog up the holosphere UI
+    Known issues:
+        Refined Radiance effects are still bugged, but this is low-priority until they return
 Version 0.5.0
     Improvements and fixes:
         Now available on 1.18.2!
