--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+Version 0.6.0
+    Improvements and fixes:
+        TBD
+    Known issues:
+        JEI compat isn't working properly
+        Refined Radiance effects don't work properly
+
 Version 0.5.3
     Improvements and fixes:
         Solidifying no longer causes a crash with Create 0.5
